# binance-quote-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/quote_service/: api.py  config.py  instruments.py  main.py  models.py  store.py  ws_client.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_instruments.py  test_integration.py  test_models.py  test_store.py  test_ws_client.py
